compiler/tools/fpp-check/test/container/priority_negative.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/container/priority_negative.fpp:3.49
  product container C id 0x100 default priority -1
                                                ^
error: invalid integer value -1
value may not be negative
